Fixed video on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -208,15 +208,15 @@ blockquote {
 // YouTube embed
 .videoWrapper {
     position: relative;
-    margin: 30px 0;
-    padding-bottom: 400px;
-    height: 0;
+    width: 100%;
+    margin: 20px auto 0 auto;
+    padding-bottom: 56.25%;
 
-    iframe {
+    .video {
       position: absolute;
       top: 0;
-      left: 250px;
-      width: $video-width;
-      height: 400px;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
 }
